# irssi-icb

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autorun.sh  config-plugin.h.in  configure  configure.ac  configure.in
src/: Makefile.am  Makefile.in
src/core/: Makefile.am  Makefile.in  icb-channels.c  icb-channels.h  icb-commands.c  icb-commands.h  icb-core.c  icb-nicklist.c  icb-nicklist.h  icb-protocol.c  icb-protocol.h  icb-queries.c  icb-queries.h  icb-servers-reconnect.c  icb-servers.c  icb-servers.h  icb-session.c  icb.h  module.h
src/fe-common/: Makefile.am  Makefile.in  fe-icb.c  module-formats.c  module-formats.h  module.h
